--- a/index.html
+++ b/index.html
@@ -75,28 +75,34 @@
       <div><a href="#">Sobre</a></div>
     </section>
   </main>
-  <footer>
-    <section>
+  <footer class="footer-grid">
+    <div class="footer-contato">
       <h2>Contato</h2>
       <ul>
         <li>samuelaoliveiraramos@gmail.com</li>
         <li>+55 (34) 9-9710-0399</li>
         <li>Rua João Balbino, nº 1941</li>
         <li>Uberlândia - MG</li>
-        <li data-semana="1,2,3,4,5,6" data-horario="7,19">Segunda à Sábado das 07h às 19h</li>
+        <li>Segunda à Sábado / 07h às 19h
+
+        </li>
       </ul>
-      <div>
-        <h2>Rede Social Letras</h2>
-        <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
-      </div>
-      <div>
-        <h2>Redes Sociais do Autor</h2>
-        <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
-        <li><a href="#" target="blank"><img src="#" alt="Logo do Facebook"></a></li>
-        <li><a href="#" target="blank"><img src="#" alt="Logo do LinkedIn"></a></li>
-        <li><a href="#" target="blank"><img src="#" alt="Logo do GitHub"></a></li>
-      </div>
-    </section>
+    </div>
+    <div class="footer-redes-autor">
+      <h2>Redes Sociais do Autor</h2>
+      <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
+      <li><a href="#" target="blank"><img src="#" alt="Logo do Facebook"></a></li>
+      <li><a href="#" target="blank"><img src="#" alt="Logo do LinkedIn"></a></li>
+      <li><a href="#" target="blank"><img src="#" alt="Logo do GitHub"></a></li>
+    </div>
+    <div class="footer-rede-letras">
+      <h2>Rede Social Letras</h2>
+      <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
+    </div>
+
+    <div class="footer-copy">
+      <p>Todos os direitros reservados.</p>
+    </div>
   </footer>
 </body>
 
