organização footer, otimização do style da main, inclusão de imgs

--- a/index.html
+++ b/index.html
@@ -72,10 +72,23 @@
     <section class="main-ideias">
       <h2>Nossas ideias</h2>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto aspernatur vitae in obcaecati quidem autem explicabo ad non delectus perspiciatis. Omnis deleniti voluptates repellendus sequi laborum eum corrupti cumque tempore.</p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet quas accusantium eius dolorum distinctio commodi doloremque eum dolores sit nihil quo corporis consequuntur, fuga facere qui eos aliquid laboriosam! </p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore asperiores dolores consectetur tenetur, fuga non maiores expedita reiciendis quam nisi animi, eius incidunt sint dignissimos! Repudiandae itaque animi recusandae.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid corporis ipsum sit nulla, sequi delectus consequuntur laudantium ut doloribus! Repellat beatae porro in quas repellendus impedit possimus numquam tempore!</p>
       <div><a href="#">Sobre</a></div>
     </section>
   </main>
   <footer class="footer-grid">
+
+    <div class="footer-redes-autor">
+      <h2>Redes Sociais Autor</h2>
+      <ul>
+        <li><a href="https://www.instagram.com/ramoos.sam/" target="blank"><img src="./img/instagram.svg" alt="Logo do Instagram"></a></li>
+        <li><a href="https://www.facebook.com/samuel.ramos.00/" target="blank"><img src="./img/facebook.svg" alt="Logo do Facebook"></a></li>
+        <li><a href="https://linkedin.com/in/samrms" target="blank"><img src="./img/linkedin.svg" alt="Logo do LinkedIn"></a></li>
+        <li><a href="https://github.com/SamuelRms" target="blank"><img src="./img/github.svg" alt="Logo do GitHub"></a></li>
+      </ul>
+    </div>
     <div class="footer-contato">
       <h2>Contato</h2>
       <ul>
@@ -84,20 +97,14 @@
         <li>Rua João Balbino, nº 1941</li>
         <li>Uberlândia - MG</li>
         <li>Segunda à Sábado / 07h às 19h
-
         </li>
       </ul>
     </div>
-    <div class="footer-redes-autor">
-      <h2>Redes Sociais do Autor</h2>
-      <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
-      <li><a href="#" target="blank"><img src="#" alt="Logo do Facebook"></a></li>
-      <li><a href="#" target="blank"><img src="#" alt="Logo do LinkedIn"></a></li>
-      <li><a href="#" target="blank"><img src="#" alt="Logo do GitHub"></a></li>
-    </div>
     <div class="footer-rede-letras">
       <h2>Rede Social Letras</h2>
-      <li><a href="#" target="blank"><img src="#" alt="Logo do Instagram"></a></li>
+      <ul>
+        <li><a href="https://www.instagram.com/letrasem.sentidos/" target="blank"><img src="./img/instagram.svg" alt="Logo do Instagram"></a></li>
+      </ul>
     </div>
 
     <div class="footer-copy">
