--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </section>
     <section class="main-ideias">
       <h2>Nossas ideias</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto aspernatur vitae in obcaecati quidem autem explicabo ad non delectus perspiciatis. Omnis deleniti voluptates repellendus sequi laborum eum corrupti cumque tempore.</p>
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet quas accusantium eius dolorum distinctio commodi doloremque eum dolores sit nihil quo corporis consequuntur, fuga facere qui eos aliquid laboriosam! </p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore asperiores dolores consectetur tenetur, fuga non maiores expedita reiciendis quam nisi animi, eius incidunt sint dignissimos! Repudiandae itaque animi recusandae.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid corporis ipsum sit nulla, sequi delectus consequuntur laudantium ut doloribus! Repellat beatae porro in quas repellendus impedit possimus numquam tempore!</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto aspernatur vitae in obcaecati quidem autem explicabo ad non delectus perspiciatis. Omnis deleniti voluptates repellendus sequi laborum eum corrupti cumque tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Est omnis temporibus vel, repellendus magni cupiditate asperiores sequi deserunt blanditiis ab saepe natus laboriosam voluptatibus! Dolor necessitatibus reprehenderit enim quibusdam perferendis?</p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet quas accusantium eius dolorum distinctio commodi doloremque eum dolores sit nihil quo corporis consequuntur, fuga facere qui eos aliquid laboriosam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum consequatur autem natus magnam vel iste cum quod, odit totam nobis error fugiat beatae. Id laudantium facilis reprehenderit quidem ex quis?</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore asperiores dolores consectetur tenetur, fuga non maiores expedita reiciendis quam nisi animi, eius incidunt sint dignissimos! Repudiandae itaque animi recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit autem tenetur sapiente consequatur, est, dolores rerum consequuntur dolorum molestias aperiam deserunt iusto incidunt ex. Delectus beatae explicabo aliquam voluptatem libero.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid corporis ipsum sit nulla, sequi delectus consequuntur laudantium ut doloribus! Repellat beatae porro in quas repellendus impedit possimus numquam tempore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam illum obcaecati modi veniam magni. Deleniti maxime animi voluptatibus cupiditate ipsum. Numquam laboriosam placeat consequuntur ea, saepe necessitatibus dolor perspiciatis possimus.</p>
       <div><a href="#">Sobre</a></div>
     </section>
   </main>
@@ -96,7 +96,7 @@
         <li>+55 (34) 9-9710-0399</li>
         <li>Rua João Balbino, nº 1941</li>
         <li>Uberlândia - MG</li>
-        <li>Segunda à Sábado / 07h às 19h
+        <li>Segunda à Sexta / 08h às 17h
         </li>
       </ul>
     </div>
