adição de paginas do projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
@@ -11,12 +11,12 @@
 
 <body class="body-container-grid">
   <header class="header-container">
-    <h1><a class="header-logo" href="#">Letrasemsentido</a></h1>
+    <h1><a class="header-logo" href="./index.html">Letrasemsentido</a></h1>
     <nav>
-      <li><a href="#">Sobre</a></li>
-      <li><a href="#">Poesias</a></li>
-      <li><a href="#">Histórias</a></li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="./sobre.html">Sobre</a></li>
+      <li><a href="./poesias.html">Poesias</a></li>
+      <li><a href="./historias.html">Histórias</a></li>
+      <li><a href="./contato.html">Contato</a></li>
     </nav>
   </header>
   <main>
@@ -25,49 +25,49 @@
       <ul class="main-ul-slides">
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./historias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./historias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./hi.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2>Titulo Poesia/História</h2>
+          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
         </li>
       </ul>
     </section>
     <section class="main-links-p-h">
-      <a href="#">Poesias</a>
-      <a href="#">Histórias</a>
+      <a href="./poesias.html">Poesias</a>
+      <a href="./historias.html">Histórias</a>
     </section>
     <section class="main-ideias">
       <h2>Nossas ideias</h2>
