--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body class="body-container-grid">
   <header class="header-container">
-    <h1><a class="header-logo" href="./index.html">Letrasemsentido</a></h1>
+    <h1><a class="header-logo" href="/">Letrasemsentido</a></h1>
     <nav>
-      <li><a href="./sobre.html">Sobre</a></li>
-      <li><a href="./poesias.html">Poesias</a></li>
-      <li><a href="./historias.html">Histórias</a></li>
-      <li><a href="./contato.html">Contato</a></li>
+      <li><a href="./pages/sobre.html">Sobre</a></li>
+      <li><a href="./pages/poesias.html">Poesias</a></li>
+      <li><a href="./pages/historias.html">Histórias</a></li>
+      <li><a href="./pages/contato.html">Contato</a></li>
     </nav>
   </header>
   <main>
@@ -25,23 +25,23 @@
       <ul class="main-ul-slides">
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./historias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/historias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./historias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/historias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
@@ -49,25 +49,25 @@
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
         <li>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, dignissimos labore dolorem reprehenderit praesentium distinctio dolores rerum eos, eaque repellendus reiciendis officiis. Eaque, excepturi ducimus? Non dolore omnis sint eos!</p>
-          <h2> <a href="./poesias.html"> Titulo Poesia/História</a></h2>
+          <h2> <a href="./pages/poesias.html"> Titulo Poesia/História</a></h2>
         </li>
       </ul>
     </section>
     <section class="main-links-p-h">
-      <a href="./poesias.html">Poesias</a>
-      <a href="./historias.html">Histórias</a>
+      <a href="./pages/poesias.html">Poesias</a>
+      <a href="./pages/historias.html">Histórias</a>
     </section>
     <section class="main-ideias">
       <h2>Nossas ideias</h2>
@@ -75,7 +75,7 @@
       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo amet quas accusantium eius dolorum distinctio commodi doloremque eum dolores sit nihil quo corporis consequuntur, fuga facere qui eos aliquid laboriosam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum consequatur autem natus magnam vel iste cum quod, odit totam nobis error fugiat beatae. Id laudantium facilis reprehenderit quidem ex quis?</p>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti dolore asperiores dolores consectetur tenetur, fuga non maiores expedita reiciendis quam nisi animi, eius incidunt sint dignissimos! Repudiandae itaque animi recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit autem tenetur sapiente consequatur, est, dolores rerum consequuntur dolorum molestias aperiam deserunt iusto incidunt ex. Delectus beatae explicabo aliquam voluptatem libero.</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aliquid corporis ipsum sit nulla, sequi delectus consequuntur laudantium ut doloribus! Repellat beatae porro in quas repellendus impedit possimus numquam tempore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam illum obcaecati modi veniam magni. Deleniti maxime animi voluptatibus cupiditate ipsum. Numquam laboriosam placeat consequuntur ea, saepe necessitatibus dolor perspiciatis possimus.</p>
-      <div><a href="#">Sobre</a></div>
+      <div><a href="./pages/sobre.html">Sobre</a></div>
     </section>
   </main>
   <footer class="footer-grid">
@@ -108,7 +108,7 @@
     </div>
 
     <div class="footer-copy">
-      <p>Todos os direitros reservados.</p>
+      <p>Todos os direitos reservados.</p>
     </div>
   </footer>
 </body>
