--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>Letrasemsentido | Sobre</title>
 </head>
 
 <body class="body-container-grid">
   <header class="header-container">
-    <h1><a class="header-logo" href="./index.html">Letrasemsentido</a></h1>
+    <h1><a class="header-logo" href="../index.html">Letrasemsentido</a></h1>
 
     <nav>
-      <li><a href="./sobre.html">Sobre</a></li>
+      <li class="active"><a href="./sobre.html">Sobre</a></li>
       <li><a href="./poesias.html">Poesias</a></li>
       <li><a href="./historias.html">Histórias</a></li>
       <li><a href="./contato.html">Contato</a></li>
@@ -25,10 +25,10 @@
     <div class="footer-redes-autor">
       <h2>Redes Sociais Autor</h2>
       <ul>
-        <li><a href="https://www.instagram.com/ramoos.sam/" target="blank"><img src="./img/instagram.svg" alt="Logo do Instagram"></a></li>
-        <li><a href="https://www.facebook.com/samuel.ramos.00/" target="blank"><img src="./img/facebook.svg" alt="Logo do Facebook"></a></li>
-        <li><a href="https://linkedin.com/in/samrms" target="blank"><img src="./img/linkedin.svg" alt="Logo do LinkedIn"></a></li>
-        <li><a href="https://github.com/SamuelRms" target="blank"><img src="./img/github.svg" alt="Logo do GitHub"></a></li>
+        <li><a href="https://www.instagram.com/ramoos.sam/" target="blank"><img src="../img/instagram.svg" alt="Logo do Instagram"></a></li>
+        <li><a href="https://www.facebook.com/samuel.ramos.00/" target="blank"><img src="../img/facebook.svg" alt="Logo do Facebook"></a></li>
+        <li><a href="https://linkedin.com/in/samrms" target="blank"><img src="../img/linkedin.svg" alt="Logo do LinkedIn"></a></li>
+        <li><a href="https://github.com/SamuelRms" target="blank"><img src="../img/github.svg" alt="Logo do GitHub"></a></li>
       </ul>
     </div>
     <div class="footer-contato">
@@ -45,12 +45,12 @@
     <div class="footer-rede-letras">
       <h2>Rede Social Letras</h2>
       <ul>
-        <li><a href="https://www.instagram.com/letrasem.sentidos/" target="blank"><img src="./img/instagram.svg" alt="Logo do Instagram"></a></li>
+        <li><a href="https://www.instagram.com/letrasem.sentidos/" target="blank"><img src="../img/instagram.svg" alt="Logo do Instagram"></a></li>
       </ul>
     </div>
 
     <div class="footer-copy">
-      <p>Todos os direitros reservados.</p>
+      <p>Todos os direitos reservados.</p>
     </div>
   </footer>
 </body>
